syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bidi.test";

service BidiService {
  rpc bidiMsg(stream MsgReq) returns (stream MsgRes);
}

message MsgReq {
  string name = 1;
}

message MsgRes {
  string response = 2;
}
